--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -4,7 +4,7 @@
 
 * {
     font-family: sans-serif;
-    background-color: rgb(75, 64, 143);
+    background-color: #4A47A3;
     color: rgb(0, 0, 0);
 }
 
@@ -63,7 +63,7 @@
     background: none;
     font-size: 16px;
     padding: 0 20px;
-    background: #7cc576;
+    background: #6fb968;
     color: rgb(255, 255, 255);
     transition: 0.3s;
     border-radius: 50px;
