--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -4,6 +4,7 @@
 
 * {
     font-family: sans-serif;
+    font-family: Roboto-Thin;
     background-color: #4A47A3;
     color: rgb(0, 0, 0);
 }
@@ -21,24 +22,104 @@
     text-align: center;
   }
 
+.showhelp form input[type=submit] {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: none;
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: 1em;
+  margin-left: 1em;
+  padding: 6px 10px;
+  background: #FEC260;
+  color: #A12568;
+  transition: 0.3s;
+  border-radius: 50px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+}
+
+.showhelp form input[type=submit]:hover {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: none;
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: 1em;
+  margin-left: 1em;
+  padding: 6px 10px;
+  background: #eba12a;
+  color: #A12568;
+  transition: 0.3s;
+  border-radius: 50px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+}
+
+ul li {
+  text-decoration: none;
+  list-style-type: none;
+}
+
+.createpoll ul li a {
+  position: fixed;
+  top: 0;
+  right: 0;
+  background: none;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: 1em;
+  margin-right: 1em;
+  padding: 6px 10px;
+  background: #FEC260;
+  color: #A12568;
+  transition: 0.3s;
+  border-radius: 50px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+}
+
+.createpoll a:hover {
+  position: fixed;
+  top: 0;
+  right: 0;
+  background: none;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: 1em;
+  margin-right: 1em;
+  padding: 6px 10px;
+  background: #eba12a;
+  color: #A12568;
+  transition: 0.3s;
+  border-radius: 50px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+}
+
+.icon {
+  width: 128px;
+  height: 128px;
+}
+
 .main h1 {
-    margin: 0 0 30px 0;
+    margin: 15px 0 15px 0;
     font-size: 48px;
-    font-weight: 500;
     line-height: 56px;
     color: rgb(255, 255, 255);
   }
 
 .main h2 {
     color: #aeaeae;
-    margin-bottom: 30px;
+    margin: 15px 0 15px 0;
     font-size: 14px;
-    font-weight: 400;
+    font-weight: bold;
     text-transform: uppercase;
   }
 
 .main-code form {
     background: rgb(255, 255, 255);
+    margin: 15px 0 15px 0;
     padding: 6px 10px;
     position: relative;
     border-radius: 50px;
@@ -50,20 +131,22 @@
     background: rgb(255, 255, 255);
     border: 0;
     font-family: sans-serif;
+    font-weight: bold;
     color: rgb(0, 0, 0);
   }
 
  .main-code form input[type=submit] {
-    position: relative; /* fehler liegt bei position, ändere ich später ~kilian */
+    position: relative;
     top: 0;
     right: 0;
     bottom: 0;
     border: 0;
     background: none;
     font-size: 16px;
+    font-weight: bold;
     padding: 6px 10px;
     background: #FEC260;
-    color: rgb(255, 255, 255);
+    color: #A12568;
     transition: 0.3s;
     border-radius: 50px;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
@@ -75,13 +158,13 @@
 
 footer {
 	font-size: 1.5em;
+  font-family: BigNoodleTiling;
   color: white;
 	position: fixed;
 	bottom: 0;
 }
 
-.copyright {
-  color: white;
-}
+
+
 
   
