--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -2,6 +2,8 @@
 @font-face { font-family: KGHAPPY; src: url('../fonts/KGHAPPY.ttf'); }
 @font-face { font-family: Roboto-Thin; src: url('../fonts/Roboto-Thin.ttf'); }
 
+/* CSS code still needs to be formatted better --> 12.10.2021 */
+
 * {
     font-family: sans-serif;
     font-family: Roboto-Thin;
@@ -158,7 +160,7 @@ ul li {
 
 footer {
 	font-size: 1.5em;
-  font-family: BigNoodleTiling;
+  font-family: BigNoodleTiling; /* thought that there should be another font */
   color: white;
 	position: fixed;
 	bottom: 0;
