--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,47 +1,56 @@
-@font-face { font-family: BigNoodleTiling; src: url('../fonts/big_noodle_titling.ttf'); }
-@font-face { font-family: KGHAPPY; src: url('../fonts/KGHAPPY.ttf'); }
-@font-face { font-family: Roboto-Thin; src: url('../fonts/Roboto-Thin.ttf'); }
+@font-face {
+  font-family: BigNoodleTiling;
+  src: url("../fonts/big_noodle_titling.ttf");
+}
+@font-face {
+  font-family: KGHAPPY;
+  src: url("../fonts/KGHAPPY.ttf");
+}
+@font-face {
+  font-family: Roboto-Thin;
+  src: url("../fonts/Roboto-Thin.ttf");
+}
 
 /* CSS code still needs to be formatted better --> 12.10.2021 */
 
 * {
-    font-family: sans-serif;
-    font-family: Roboto-Thin;
-    background-color: #4A47A3;
-    color: rgb(0, 0, 0);
+  font-family: sans-serif;
+  font-family: Roboto-Thin;
+  background-color: #4a47a3;
+  color: white;
 }
 
 .main-container {
-    position: absolute;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-  }
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
 
-.showhelp form input[type=submit] {
+.showhelp ul li button {
   position: fixed;
   top: 0;
   left: 0;
   background: none;
+  text-decoration: none;
   font-size: 16px;
   font-weight: bold;
   margin-top: 1em;
   margin-left: 1em;
   padding: 6px 10px;
-  background: #FEC260;
-  color: #A12568;
-  transition: 0.3s;
+  background: #fec260;
+  color: #a12568;
+  /* transition: 0.3s; */
   border-radius: 50px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 
-.showhelp form input[type=submit]:hover {
+.showhelp ul li button:hover {
   position: fixed;
   top: 0;
   left: 0;
@@ -52,10 +61,9 @@
   margin-left: 1em;
   padding: 6px 10px;
   background: #eba12a;
-  color: #A12568;
-  transition: 0.3s;
+  color: #a12568;
+  /* transition: 0.3s; */
   border-radius: 50px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 
 ul li {
@@ -74,11 +82,10 @@ ul li {
   margin-top: 1em;
   margin-right: 1em;
   padding: 6px 10px;
-  background: #FEC260;
-  color: #A12568;
+  background: #fec260;
+  color: #a12568;
   transition: 0.3s;
   border-radius: 50px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 
 .createpoll a:hover {
@@ -93,10 +100,9 @@ ul li {
   margin-right: 1em;
   padding: 6px 10px;
   background: #eba12a;
-  color: #A12568;
+  color: #a12568;
   transition: 0.3s;
   border-radius: 50px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 
 .icon {
@@ -105,68 +111,62 @@ ul li {
 }
 
 .main h1 {
-    margin: 15px 0 15px 0;
-    font-size: 48px;
-    line-height: 56px;
-    color: rgb(255, 255, 255);
-  }
-
-.main h2 {
-    color: #aeaeae;
-    margin: 15px 0 15px 0;
-    font-size: 14px;
-    font-weight: bold;
-    text-transform: uppercase;
-  }
-
-.main-code form {
-    background: rgb(255, 255, 255);
-    margin: 15px 0 15px 0;
-    padding: 6px 10px;
-    position: relative;
-    border-radius: 50px;
-    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-    text-align: left;
-  }
-
-.main-code form input[type=number] {
-    background: rgb(255, 255, 255);
-    border: 0;
-    font-family: sans-serif;
-    font-weight: bold;
-    color: rgb(0, 0, 0);
-  }
-
- .main-code form input[type=submit] {
-    position: relative;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    border: 0;
-    background: none;
-    font-size: 16px;
-    font-weight: bold;
-    padding: 6px 10px;
-    background: #FEC260;
-    color: #A12568;
-    transition: 0.3s;
-    border-radius: 50px;
-    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-  }
-
-.main-code form input[type=submit]:hover {
-    background: #eba12a;
-  }
-
-footer {
-	font-size: 1.5em;
-  font-family: BigNoodleTiling; /* thought that there should be another font */
-  color: white;
-	position: fixed;
-	bottom: 0;
+  margin: 15px 0 15px 0;
+  font-size: 48px;
+  line-height: 56px;
+  color: rgb(255, 255, 255);
 }
 
+.main h2 {
+  color: #aeaeae;
+  margin: 15px 0 15px 0;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
 
+.main-code form {
+  background: rgb(255, 255, 255);
+  margin: 15px 0 15px 0;
+  padding: 6px 10px;
+  position: relative;
+  border-radius: 50px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  text-align: left;
+}
 
+.main-code form input[type="number"] {
+  background: rgb(255, 255, 255);
+  border: 0;
+  font-family: sans-serif;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+}
 
-  
+.main-code form input[type="submit"] {
+  position: relative;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  border: 0;
+  background: none;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 6px 10px;
+  background: #fec260;
+  color: #a12568;
+  transition: 0.3s;
+  border-radius: 50px;
+}
+
+.main-code form input[type="submit"]:hover {
+  background: #eba12a;
+}
+
+footer {
+  font-size: 1.5em;
+  font-family: BigNoodleTiling; /* thought that there should be another font */
+  color: white;
+  position: fixed;
+  bottom: 0;
+}
