--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -19,6 +19,11 @@
   color: white;
 }
 
+ul li {
+  text-decoration: none;
+  list-style-type: none;
+}
+
 .icon {
   width: 128px;
   height: 128px;
@@ -40,7 +45,100 @@
   align-items: center;
   flex-direction: column;
   text-align: center;
-  border: 2px solid green;
+}
+  .createsurvey a {
+    color: #a12568;
+    font-size: 16px;
+    font-weight: bold;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: none;
+    text-decoration: none;
+    margin-top: 1em;
+    margin-right: 1em;
+    padding: 6px 10px;
+    background: #FEC260;
+    transition: 0.3s;
+    border-radius: 50px;
+  }
+
+  .createsurvey a:hover {
+    color: #a12568;
+    font-size: 16px;
+    font-weight: bold;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: none;
+    text-decoration: none;
+    margin-top: 1em;
+    margin-right: 1em;
+    padding: 6px 10px;
+    background: #eba12a;
+    transition: 0.3s;
+    border-radius: 50px;
+  }
+
+  .main h1 {
+    color: rgb(255, 255, 255);
+    margin: 15px 0 15px 0;
+    font-size: 48px;
+    line-height: 56px;
+  }
+  
+  .main-code form {
+    background: rgb(255, 255, 255);
+    margin: 15px 0 15px 0;
+    padding: 6px 10px;
+    position: relative;
+    border-radius: 50px;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    text-align: left;
+  }
+  
+  .main-code form input[type="number"] {
+    color: rgb(0, 0, 0);
+    font-family: sans-serif;
+    font-weight: bold;
+    background: rgb(255, 255, 255);
+    border: 0;
+  }
+  
+  .main-code form input[type="submit"] {
+    color: #a12568;
+    font-size: 16px;
+    font-weight: bold;
+    position: relative;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    border: 0;
+    background: none;
+    padding: 6px 10px;
+    background: #fec260;
+    transition: 0.3s;
+    border-radius: 50px;
+  }
+  
+  .main-code form input[type="submit"]:hover {
+    background: #eba12a;
+  }
+
+  .main h2 {
+    color: rgb(202, 202, 202);
+    font-size: 14px;
+    font-weight: bold;
+    margin: 15px 0 15px 0;
+    text-transform: uppercase;
+  }
+    .main h2 a {
+      color: #FEC260;
+      text-decoration: none;
+    }
+
+.help {
+  min-height: 100%;
 }
 
 .help-header{
@@ -77,127 +175,102 @@
   align-items: center;
   flex-direction: column;
 }
-  .help-text {
-    border: 5px solid #423f8f;
-    background: #423f8f;
-  }
   .help-text h1{
     font-size: 36px;
     font-weight: bold;
-    background: #423f8f;
   }
   .help-text h2 {
     font-size: 30px;
-    background: #423f8f;
   }
   .help-text h3 {
     font-size: 12px;
-    background: #423f8f;
   }
 
-ul li {
-  text-decoration: none;
-  list-style-type: none;
+
+.answer {
+  min-height: 100%;
 }
 
-.createsurvey a {
-  color: #a12568;
-  font-size: 16px;
-  font-weight: bold;
+.answer-header {
+  min-height: 10%;
+}
+  .icon-answer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+.answer-body {
+  text-align: center;
   position: absolute;
-  top: 0;
-  right: 0;
-  background: none;
-  text-decoration: none;
-  margin-top: 1em;
-  margin-right: 1em;
-  padding: 6px 10px;
-  background: #FEC260;
-  transition: 0.3s;
-  border-radius: 50px;
+  top: 128px;
+  bottom: 128px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
+  .answer-question h1 {
+    font-size: 36px;
+    font-weight: bold;
+  }
+  .valuation {
+    margin: 0;
+    padding: 0;
+    transform: rotateY(180deg);
+  }
+    .valuation input{
+      display: none;
 
-.createsurvey a:hover {
-  color: #a12568;
-  font-size: 16px;
-  font-weight: bold;
-  position: absolute;
-  top: 0;
-  right: 0;
-  background: none;
-  text-decoration: none;
-  margin-top: 1em;
-  margin-right: 1em;
-  padding: 6px 10px;
-  background: #eba12a;
-  transition: 0.3s;
-  border-radius: 50px;
-}
-
-.main h1 {
-  color: rgb(255, 255, 255);
-  margin: 15px 0 15px 0;
-  font-size: 48px;
-  line-height: 56px;
-}
-
-.main h2 {
-  color: rgb(202, 202, 202);
-  font-size: 14px;
-  font-weight: bold;
-  margin: 15px 0 15px 0;
-  text-transform: uppercase;
-}
-
-.main h2 a {
-  color: #FEC260;
-  text-decoration: none;
-}
-
-
-.main-code form {
-  background: rgb(255, 255, 255);
-  margin: 15px 0 15px 0;
-  padding: 6px 10px;
-  position: relative;
-  border-radius: 50px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-  text-align: left;
-}
-
-.main-code form input[type="number"] {
-  color: rgb(0, 0, 0);
-  font-family: sans-serif;
-  font-weight: bold;
-  background: rgb(255, 255, 255);
-  border: 0;
-}
-
-.main-code form input[type="submit"] {
-  color: #a12568;
-  font-size: 16px;
-  font-weight: bold;
-  position: relative;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  border: 0;
-  background: none;
-  padding: 6px 10px;
-  background: #fec260;
-  transition: 0.3s;
-  border-radius: 50px;
-}
-
-.main-code form input[type="submit"]:hover {
-  background: #eba12a;
-}
+    }
+    .valuation label {
+      display: inline-block;
+      cursor: pointer;
+      width: 50px;
+    }
+      .valuation label:before {
+        content: '\f005';
+        font-family: fontAwesome !important;
+        position: relative;
+        display: inline-block;
+        font-size: 50px;
+        color: #101010;
+      }
+      .valuation label:after {
+        content: '\f005';
+        font-family: fontAwesome !important;
+        position: relative;
+        bottom: 1.5em;
+        display: block;
+        font-size: 50px;
+        color: #FEC260;
+        opacity: 0;
+        transition: 0.5s;
+        text-shadow: 0 2px 5px rgba(0,0,0,0.5)
+      }
+      .valuation label:hover:after,
+      .valuation label:hover ~ label:after,
+      .valuation input:checked ~ label:after {
+        opacity: 1;
+      }
 
 footer {
   color: white;
-  font-family: BigNoodleTiling; /* thought that there should be another font */
+  font-family: BigNoodleTiling;
   font-size: 1.5em;
-  position: fixed;
-  bottom: 0.1em;
-  right: 0.5em;
-}
+}  
+  .main-footer {
+    position: fixed;
+    bottom: 0.1em;
+    right: 0.5em;
+  }
+  .help-footer {
+    position: fixed;
+    bottom: 0.1em;
+    right: 0.5em;
+  }
+  .answer-footer {
+    position: absolute;
+    bottom: 0.1em;
+    right: 0.5em;
+  }
